
2.0.5:
------

  * APK Downloads
    - The OS' download service is now used directly instead of proxying
      requests through the installed browser.
    - Downloads respect the user's preference regarding which networks are
      OK to use (WiFi / mobile data).
    - Downloaded APKs can be installed directly from ApkTrack's UI.
  * UI
    - Fixed a longstanding issue where the last check date could overlap
      the action icon (that one really bugged me).
  * Settings
    - Added options to ignore all system / Xposed apps in a single click.
      A screen dedicated to managing ignored apps is still warranted.
    - Added a preference allowing users who enabled background checks to
      automatically download new APKs when they become available.

2.0.4:
------

  * Source detection
    - ApkTrack will set the right update source for itself (upstream or
      F-Droid) depending on who signed the APK.
    - The source for all Xposed modules is now detected automatically.
    - The F-Droid app is now correctly handled by the F-Droid source.
  * Miscellaneous
    - Moved the ApkTrack APKs to a server with more bandwidth.
    - Version checks for ApkTrack now take place over HTTPS.
    - Updated German translation.
  * Bugfixes
    - Fixed  a widespread crash triggered during the initialization
      of the app.
    - Fixed a problem with icon resizing for devices with uncommon DPI.
    - Minor bugfixes for crashes reported through ACRA.

2.0.3:
------

  * Security
    - Communications with the AppBrain proxy and crash report service now take
      place over HTTPS.
    - Certificates used by those websites are bundled with ApkTrack to prevent
      man in the middle attacks.
  * Translations
    - Updated Polish translation.
    - Added Italian translation.
  * Bugfixes
    - Resolved a race condition potentially leading to random crashes.
    - The AppBrain update source returned a malformed result when it doesn't