@@ -11,6 +11,10 @@
     - Downloads respect the user's preference regarding which networks are
       OK to use (WiFi / mobile data).
     - Downloaded APKs can be installed directly from ApkTrack's UI.
+  * Permissions
+    - ApkTrack needs a new permission (WRITE_EXTERNAL_STORAGE) to write
+      downloaded APKs to the sdcard.
+    - TODO: Permissions can be denied on Marshmallow
   * UI
     - Fixed a longstanding issue where the last check date could overlap
       the action icon (that one really bugged me).
